# cie10

./: .gitignore  CLAUDE.md  README.md  Servidores.txt  config.py  ejemplo.txt  main.py  pipeline.py  prompts.py  pyproject.toml
old/: main copy.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/cie10_catalogo/0/: applied_seq.json  newest_clocks.json  replica_state.json
qdrant_storage/collections/cie10_catalogo/0/segments/135b4e85-8f92-4a26-a9a0-1d24ad299fae/: id_tracker.mappings  id_tracker.versions  segment.json
qdrant_storage/collections/cie10_catalogo/0/segments/135b4e85-8f92-4a26-a9a0-1d24ad299fae/vector_index/: hnsw_config.json
qdrant_storage/collections/cie10_catalogo/0/segments/f09bc53e-fe3b-429c-8b04-83083f90cfc7/: id_tracker.mappings  id_tracker.versions  segment.json
qdrant_storage/collections/cie10_catalogo/0/segments/f09bc53e-fe3b-429c-8b04-83083f90cfc7/vector_index/: hnsw_config.json
qdrant_storage/collections/cie10_catalogo/0/segments/f9f470b1-a3d7-432c-8f64-3f872e90eef7/: id_tracker.mappings  id_tracker.versions  segment.json
qdrant_storage/collections/cie10_catalogo/0/segments/f9f470b1-a3d7-432c-8f64-3f872e90eef7/vector_index/: hnsw_config.json
qdrant_storage/collections/cie10_catalogo/0/segments/fc4f4393-08ce-48a1-bb86-0b9b90b51734/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/cie10_catalogo/0/wal/: first-index
